@@ -1,5 +1,11 @@
 2008-05-08  Gabriel Burt  <gabriel.burt@gmail.com>
 
+	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceView.cs: Fix
+	issue with parent source not getting expanded when it should.  MTP and
+	iPod sources should autoexpand properly now.
+
+2008-05-08  Gabriel Burt  <gabriel.burt@gmail.com>
+
 	* src/Dap/Banshee.Dap.Mtp/Banshee.Dap.Mtp/MtpSource.cs: Fix bug with
 	updating/removing the album when removing a track.
 
